# wagtail_graphql_api

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
about/: models.py
about/migrations/: 0001_initial.py
agents/: models.py  queries.py  wagtail_hooks.py
agents/migrations/: 0001_initial.py  0002_alter_agents_image.py  0003_alter_agents_image.py  0004_alter_agentspage_advert.py  0005_auto_20221222_1449.py  0006_auto_20221222_1510.py  0007_agentspage_agents.py  0008_alter_agentspage_agents.py  0009_auto_20221222_1620.py  0010_auto_20221222_1643.py  0011_auto_20221226_1231.py  0012_alter_agentsconnection_page.py  0013_alter_agents_image.py  0014_agents_first_parent.py  0015_auto_20230103_1441.py  0016_remove_agentspage_first_parent.py
app/: urls.py
app/management/commands/: initadmin.py
app/settings/: base.py  dev.py  docker.py
app/templates/: base.html  base_origin.html
app/templatetags/: base_tags.py
appsalesforce/: apps.py  models.py  settings.py  utils.py  views.py
appsalesforce/migrations/: 0001_initial.py  0002_auto_20221221_0845.py  0003_alter_contact_options.py
blog/: models.py  wagtail_hooks.py
blog/migrations/: 0001_initial.py  0002_alter_blogpage_title_desc.py  0003_blogpage_first_parent.py  0004_auto_20230103_1459.py
contacts/: models.py
contacts/migrations/: 0001_initial.py
home/: models.py  queries.py  wagtail_hooks.py
home/migrations/: 0001_initial.py  0002_sliderconnection.py
menu/: models.py  wagtail_hooks.py
slider/: models.py  wagtail_hooks.py
slider/migrations/: 0001_initial.py
(+11 files in other folders)
