[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alex Kubyk <alex.kubyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.5"
wagtail-orderable = "^1.1.0"
wagtail-grapple = "^0.19.2"
wagtail = "2.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
